--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,27 @@
 # This file may be used to create an environment using:
 # $ conda create --name <env> --file <this file>
 # platform: linux-64
-asn1crypto=0.24.0=py27_0
+blas=1.0=mkl
 ca-certificates=2018.03.07=0
 certifi=2018.8.24=py27_1
-cffi=1.11.5=py27he75722e_1
-chardet=3.0.4=py27_1
-conda=4.5.11=py27_0
-conda-env=2.6.0=1
-cryptography=2.3.1=py27hc365091_0
-enum34=1.1.6=py27_1
-futures=3.2.0=py27_0
-idna=2.7=py27_0
-ipaddress=1.0.22=py27_0
+intel-openmp=2019.0=118
 libedit=3.1.20170329=h6b74fdf_2
 libffi=3.2.1=hd88cf55_4
 libgcc-ng=8.2.0=hdf63c60_1
+libgfortran-ng=7.3.0=hdf63c60_0
 libstdcxx-ng=8.2.0=hdf63c60_1
+mkl=2019.0=118
+mkl_fft=1.0.6=py27h7dd41cf_0
+mkl_random=1.0.1=py27h4414c95_1
 ncurses=6.1=hf484d3e_0
+numpy=1.15.2=py27h1d66e8a_0
+numpy-base=1.15.2=py27h81de0dd_0
 openssl=1.0.2p=h14c3975_0
 pip=10.0.1=py27_0
-pycosat=0.6.3=py27h14c3975_0
-pycparser=2.18=py27_1
-pyopenssl=18.0.0=py27_0
-pysocks=1.6.8=py27_0
 python=2.7.15=h1571d57_0
 readline=7.0=h7b6447c_5
-requests=2.19.1=py27_0
-ruamel_yaml=0.15.46=py27h14c3975_0
 setuptools=40.2.0=py27_0
-six=1.11.0=py27_1
-sqlite=3.24.0=h84994c4_0
+sqlite=3.25.2=h7b6447c_0
 tk=8.6.8=hbc83047_0
-urllib3=1.23=py27_0
 wheel=0.31.1=py27_0
-yaml=0.1.7=had09818_2
 zlib=1.2.11=ha838bed_2
