--- a/requirements.txt
+++ b/requirements.txt
@@ -2,26 +2,29 @@
 # $ conda create --name <env> --file <this file>
 # platform: linux-64
 blas=1.0=mkl
-ca-certificates=2018.03.07=0
-certifi=2018.8.24=py27_1
-intel-openmp=2019.0=118
-libedit=3.1.20170329=h6b74fdf_2
+ca-certificates=2019.1.23=0
+certifi=2018.11.29=py37_0
+intel-openmp=2019.1=144
+libedit=3.1.20181209=hc058e9b_0
 libffi=3.2.1=hd88cf55_4
 libgcc-ng=8.2.0=hdf63c60_1
 libgfortran-ng=7.3.0=hdf63c60_0
 libstdcxx-ng=8.2.0=hdf63c60_1
-mkl=2019.0=118
-mkl_fft=1.0.6=py27h7dd41cf_0
-mkl_random=1.0.1=py27h4414c95_1
-ncurses=6.1=hf484d3e_0
-numpy=1.15.2=py27h1d66e8a_0
-numpy-base=1.15.2=py27h81de0dd_0
-openssl=1.0.2p=h14c3975_0
-pip=10.0.1=py27_0
-python=2.7.15=h1571d57_0
+mkl=2019.1=144
+mkl_fft=1.0.10=py37ha843d7b_0
+mkl_random=1.0.2=py37hd81dba3_0
+ncurses=6.1=he6710b0_1
+numpy=1.15.4=py37h7e9f1db_0
+numpy-base=1.15.4=py37hde5b4d6_0
+openssl=1.1.1a=h7b6447c_0
+pip=19.0.1=py37_0
+python=3.7.2=h0371630_0
 readline=7.0=h7b6447c_5
-setuptools=40.2.0=py27_0
-sqlite=3.25.2=h7b6447c_0
+scikit-learn=0.20.2=py37hd81dba3_0
+scipy=1.2.1=py37h7c811a0_0
+setuptools=40.8.0=py37_0
+sqlite=3.26.0=h7b6447c_0
 tk=8.6.8=hbc83047_0
-wheel=0.31.1=py27_0
-zlib=1.2.11=ha838bed_2
+wheel=0.32.3=py37_0
+xz=5.2.4=h14c3975_4
+zlib=1.2.11=h7b6447c_3
